--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ toml = "0.9.8"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 bytes = "1.10.1"
+object_store = "0.12.4"
+serde_json = "1.0.145"
+
+[dev-dependencies]
+tempfile = "3.10"
