--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ dotenvy = "0.15.7"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
 tokio-util = { version = "0.7.16", features = ["io"] }
 futures-util = "0.3.31"
+tracing-panic = "0.1.2"
 
 [dev-dependencies]
 tempfile = "3.10"
