--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "post
 tokio-util = { version = "0.7.16", features = ["io"] }
 futures-util = "0.3.31"
 tracing-panic = "0.1.2"
+anyhow = "1.0.100"
+tower-http = { version = "0.6.6", features = ["trace"] }
+thiserror = "2.0.17"
 
 [dev-dependencies]
 tempfile = "3.10"
