--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,12 @@ serde_json = "1.0.145"
 dotenvy = "0.15.7"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
 tokio-util = { version = "0.7.16", features = ["io"] }
-futures-util = "0.3.31"
+futures = "0.3.31"
 tracing-panic = "0.1.2"
 anyhow = "1.0.100"
 tower-http = { version = "0.6.6", features = ["trace"] }
 thiserror = "2.0.17"
+uuid = { version = "1.18.1", features = ["v7"] }
 
 [dev-dependencies]
 tempfile = "3.10"
