--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://postgres:password@localhost:5432/moments_aura
+JWT_SECRET='' # hint: you can use `openssl rand -hex 32 to generate a secret key`
