--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ tower-http = { version = "0.6.6", features = ["trace"] }
 thiserror = "2.0.17"
 uuid = { version = "1.18.1", features = ["v7"] }
 validator = { version = "0.20.0", features = ["derive"] }
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
+time = "0.3.44"
 
 [dev-dependencies]
 tempfile = "3.10"
