--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ uuid = { version = "1.18.1", features = ["v7"] }
 validator = { version = "0.20.0", features = ["derive"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 time = "0.3.44"
+kamadak-exif = "0.6.1"
+bytes = "1.11.0"
 
 [dev-dependencies]
 tempfile = "3.10"
