--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
