--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,20 +11,19 @@ toml = "0.9.8"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 serde_json = "1.0.145"
-sqlx = { version = "0.8.6", features = [
+sqlx = { version = "0.8.6", default-features = false, features = [
     "runtime-tokio",
-    "tls-native-tls",
+    "tls-rustls",
     "postgres",
     "macros",
     "uuid",
+    "migrate",
     "time",
 ] }
-tokio-util = { version = "0.7.16", features = ["io"] }
-futures = "0.3.31"
 tracing-panic = "0.1.2"
 tower-http = { version = "0.6.6", features = ["trace"] }
 thiserror = "2.0.17"
-uuid = { version = "1.18.1", features = ["v7", "serde"] }
+uuid = { version = "1.18.1", features = ["v7", "serde", "fast-rng"] }
 validator = { version = "0.20.0", features = ["derive"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 time = "0.3.44"
@@ -33,7 +32,10 @@ bytes = "1.11.0"
 sha2 = "0.10.9"
 image = "0.25.9"
 reverse_geocoder = "4.1.1"
-reqwest = { version = "0.12.25", features = ["json"] }
+reqwest = { version = "0.12.25", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 base64 = "0.22.1"
 
 [dev-dependencies]
