--- a/config.toml
+++ b/config.toml
@@ -11,5 +11,5 @@ jwt_secret= "{{ $JWT_SECRET }}" # Hint: you can use `openssl rand -hex 32 to gen
 enable = true
 # Any openapi compatible API is supported.
 model = "qwen3-vl-plus"
-base_url = "https://dashscope.aliyuncs.com/compatible-mode/v1/chat/completions"
-api_key = "{{ $DASHBOARD_API_KEY }}"
+base_url = "https://dashscope.aliyuncs.com/compatible-mode/v1"
+api_key = "{{ $DASHSCOPE_API_KEY }}"
