--- a/compose.yaml
+++ b/compose.yaml
@@ -29,7 +29,7 @@ services:
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       JWT_SECRET: ${JWT_SECRET}
-      DASHBOARD_API_KEY: ${DASHBOARD_API_KEY}
+      DASHSCOPE_API_KEY: ${DASHSCOPE_API_KEY}
       RUST_LOG: ${RUST_LOG}
     volumes:
       - ./data:/app/data
